<resources>
    <string name="app_name">TripGuy</string>
    <string name="title_activity_welcome">Home Screen</string>
    <!-- String for buttons -->
    <string name="next">Kế tiếp</string>
    <string name="back">Về trước</string>
    <string name="btn_launch_now">Sử dụng ngay</string>

    <!-- String for welcome screen -->
    <string name="welcome_screen_title1">Thông tin địa điểm</string>
    <string name="welcome_screen_desc1">Cung cấp thông tin điểm đến, khách sạn, ăn uống và nhiều thông tin khác</string>
    <string name="welcome_screen_title2">Lên lịch trình</string>
    <string name="welcome_screen_desc2">Giúp bạn tạo lịch trình chu đáo để có chuyến đi trọn vẹn, kết nối, giữ liên lạc với những người trong chuyến đi</string>
    <string name="welcome_screen_title3">Tìm deal giá rẻ</string>
    <string name="welcome_screen_desc3">Tìm deal phù hợp nhất với mục đích chuyến đi của bạn</string>
    <string name="welcome_screen_title4">Các địa điểm "hot" nhất trong mùa</string>
    <string name="welcome_screen_desc4">Cùng TripGuy theo dõi các địa điểm du lịch "hot" nhất hiện nay</string>

    <!-- String for bottom menu -->
    <string name="menu_location">Địa điểm</string>
    <string name="menu_plan">Kế hoạch</string>
    <string name="menu_deal">Tìm vé</string>
    <string name="menu_me">Cá nhân</string>
    <string name="menu_trend">Xu hướng</string>

    <!-- String for activity sign in, sign up -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_up">Đăng ký</string>
    <string name="btn_forgot_password">Quên mật khẩu?</string>
    <string name="btn_link_to_login">Đã có tài khoản. Đăng nhập</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_link_to_register">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="title_forgot_password">Quên mật khẩu?</string>
    <string name="body_forgot_password">Vui lòng nhập địa chỉ email, chúng tôi sẽ thực hiện cập nhật mật khẩu mới</string>
    <string name="btn_reset_password">Reset mật khẩu</string>
    <string name="btn_back">&#8810; Trở về</string>

    <!-- String for personal settings -->
    <string name="nickname">Nickname</string>
    <string name="city">Nơi ở</string>
    <string name="email">Email</string>
    <string name="birthday">Sinh nhật</string>
    <string name="sex">Giới tính</string>
    <string name="introduce_your_self">Giới thiệu bản thân</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="app_info">Thông tin ứng dụng</string>
    <string name="feedback">Phản hồi</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="sign_in_up">Đăng nhập/Đăng ký</string>
    <string name="my_friends">Bạn của tôi</string>
    <string name="make_friends">Thêm bạn &#10148;</string>
    <string name="settings">Cài đặt</string>
    <string name="btn_save">Lưu</string>
    <string name="update_profile">Chỉnh sửa trang cá nhân</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="done">Xong</string>
    <string name="cancel">Hủy</string>

    <!-- String for layout item_province -->
    <string name="name_not_available">Name is not available</string>
    <string name="title_not_available">Title is not available</string>
    <string name="search_hint">Bạn muốn đi đâu?</string>
    <string name="contact">Thông tin liên lạc</string>
    <string name="location">Vị trí</string>
    <string name="scheduleAndFee">Lịch trình &amp; chí phí tham khảo</string>
    <string name="rating">Đánh giá &#10148;</string>
    <string name="update_rating">Chỉnh sửa đánh giá &#10148;</string>
    <string name="description">Mô tả</string>
    <string name="photo">Hình ảnh</string>
    <string name="title">Tiêu đề</string>
    <string name="btn_submit">Gửi</string>
    <string name="btn_add">Thêm &#8595;</string>
    <string name="btn_remove">Xóa &#8593;</string>
    <string name="comment_not_available">Hiện chưa có đánh giá nào</string>
    <string name="friend_not_available">Hiện chưa có bạn bè nào</string>

    <string name="request"> Kết bạn</string>
    <string name="friend">&#10004; Bạn bè</string>
    <string name="sent">&#10148; Đã gửi</string>
    <string name="agree">&#9873; Đồng ý</string>
    <string name="invited">&#10004; Đã mời</string>

    <string name="update_plan">Chỉnh sửa &#10148;</string>
    <string name="remove_plan">Xóa kế hoạch &#10006;</string>
    <string name="cancel_plan">Không tham gia &#10006;</string>
    <string name="trip_plan">Kế hoạch chuyến đi</string>
    <string name="plan_list_not_available">Hiện bạn chưa có kế hoạch du lịch nào</string>
    <string name="not_login">Hiện bạn chưa đăng nhập</string>

    <!-- String for info icon click -->
    <string name="message_my_friend">Xem vị trí của bạn bè của bạn trên bản đồ, đặc biệt trong những chuyến du lịch,
        bạn sẽ không bao giờ mất liên lạc với họ nữa.\nLưu ý: bạn có thể tắt định vị khi không dùng đến tính năng này.</string>
    <string name="message_plan">Lên kế hoạch, lịch trình cho chuyến đi của bạn, tag bạn bè cùng đi vào để mọi người có thể
    theo dõi và đóng góp cho chuyến đi nhé.</string>
    <string name="message_province">TripGuy cho bạn thông tin các địa điểm du lịch theo tỉnh thành, bạn có thể xem thêm thông tin chi tiết về
        địa điểm ẩm thực, khách sạn và nơi tham quan.</string>
    <string name="message_trend">TripGuy theo dõi các địa điểm du lịch hot nhất hiện nay, hãy cùng bạn bè và người thân xách balo lên và đi
    đến những nơi này ngay nào.</string>
    <string name="message_deal">TripGuy giúp bạn tìm deal nhanh và hiệu quả nhất, hãy đặt ngay vé cho bạn cùng gia đình nào.</string>
    <string name="message_personal">TripGuy giúp bạn quản lý thông tin cá nhân một cách đơn giản và hiệu quả nhất.</string>

    <string-array name="province_detail_tab_pager">
        <item>"Giới thiệu"</item>
        <item>"Khách sạn"</item>
        <item>"Ẩm thực"</item>
        <item>"Địa điểm"</item>
        <item>"Ảnh đẹp"</item>
    </string-array>

    <string-array name="bad_words">
        <item>"lồn"</item>
        <item>"lon"</item>
        <item>"cặc"</item>
        <item>"cac"</item>
        <item>"đụ"</item>
        <item>"đù"</item>
        <item>"má"</item>
        <item>"dâm"</item>
        <item>"địt"</item>
        <item>"dit"</item>
        <item>"dis"</item>
        <item>"djs"</item>
        <item>"cứt"</item>
        <item>"cút"</item>
        <item>"đéo"</item>
        <item>"buồi"</item>
        <item>"fuck"</item>
        <item>"chó chết"</item>
        <item>"óc chó"</item>
        <item>"đĩ"</item>
        <item>"câm"</item>
        <item>"chết"</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="api_key">AIzaSyCyIPbgc4_qtZCXdaq945UK-sx_SQwYXd8</string-array>
</resources>
