<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ViewPager must place at top -->
    <android.support.v4.view.ViewPager
        android:id="@+id/activity_welcome_vp_slide_intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/activity_welcome_ll_dots"
        android:background="@android:color/white"/>

    <LinearLayout
        android:id="@+id/activity_welcome_ll_dots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dots_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/activity_welcome_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/next"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/activity_welcome_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/activity_welcome_btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_welcome_btn_launch_now"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_btn_transparent"
        android:text="@string/sign_in_up"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/activity_welcome_btn_launch_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_welcome_ll_dots"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_btn_transparent"
        android:text="@string/btn_launch_now"
        android:textColor="@android:color/white"/>
</RelativeLayout>
