<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_update_user_profile_sv_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            >

            <ImageView
                android:id="@+id/fragment_update_user_profile_iv_blur_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBlackTransparent"
                android:scaleType="centerCrop"
                />

            <ImageView
                android:id="@+id/fragment_update_user_profile_iv_change_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_change_avatar"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_update_user_profile_iv_avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_avatar"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/text_view_padding"
                android:paddingTop="@dimen/text_view_padding"
                android:text="@string/personal_info"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/fragment_update_user_profile_et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/nickname"
                    android:inputType="textCapSentences"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/fragment_update_user_profile_ll_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="5dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="10dp"
                    android:text="Nơi ở"
                    android:textColor="@color/colorMain"
                    />

                <TextView
                    android:id="@+id/fragment_update_user_profile_tv_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#686767"
                    />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/fragment_update_user_profile_et_introduce_your_self"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/introduce_your_self"
                    android:inputType="textCapSentences"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/fragment_update_user_profile_ll_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_view_padding"
                android:weightSum="5"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/birthday"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/fragment_update_user_profile_tv_birthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_medium"
                            />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="15.5dp"
                            android:src="@drawable/ic_more"
                            />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#686767"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_view_padding"
                android:weightSum="5"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/sex"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"
                    />

                <Spinner
                    android:id="@+id/fragment_update_user_profile_spn_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/fragment_update_user_profile_btn_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:background="@drawable/btn_positive"
                    android:text="@string/done"
                    android:textColor="@android:color/white"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <Button
                    android:id="@+id/fragment_update_user_profile_btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:background="@null"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_press_state_green"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>